package com.gzczy.design.model.adapter.objects;

/**
 * @Description 5V电源
 * @Author chenzhengyu
 * @Date 2020-12-01 16:39
 */
interface Voltage5V {
    public int elc5v();
}
